<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:layout_width="fill_parent">
            <TextView
                    android:text="@string/manage_budget_balance_label"
                    android:textSize="@dimen/balance_text_size"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <TextView
                    android:id="@+id/manage_budget_balance"
                    android:paddingLeft="6dp"
                    android:textSize="@dimen/balance_text_size"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center">
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:paddingLeft="@dimen/table_row_padding"
                          android:paddingRight="@dimen/table_row_padding"
                          android:layout_height="wrap_content">
                <TextView
                        android:layout_weight="1"
                        android:text="@string/manage_budget_starting_balance_label"
                        android:textSize="@dimen/manage_budget_standard_label"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        style="@style/summary_label"
                />
                <TextView
                        android:id="@+id/manage_budget_starting_balance"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        style="@style/summary_currency"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:paddingLeft="@dimen/table_row_padding"
                          android:paddingRight="@dimen/table_row_padding"
                          android:layout_height="wrap_content">
                <TextView
                        android:layout_weight="1"
                        android:textSize="@dimen/manage_budget_standard_label"
                        android:text="@string/manage_budget_credits_label"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        style="@style/summary_label"/>
                <TextView
                        android:id="@+id/manage_budget_credits"
                        android:layout_weight="1"
                        style="@style/summary_currency"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:paddingLeft="@dimen/table_row_padding"
                          android:paddingRight="@dimen/table_row_padding"
                          android:layout_height="wrap_content">
                <TextView
                        android:layout_weight="1"
                        android:text="@string/manage_budget_debits_label"
                        android:textSize="@dimen/manage_budget_standard_label"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        style="@style/summary_label"/>
                <TextView
                        android:id="@+id/manage_budget_debits"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        style="@style/summary_currency"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="vertical">
            <TextView
                    android:paddingTop="12dp"
                    android:text="@string/largest_credit_label"
                    android:paddingLeft="@dimen/table_row_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/summary_label_big"
                    />
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:paddingLeft="@dimen/table_row_padding"
                          android:paddingRight="@dimen/table_row_padding"
                          android:layout_height="wrap_content">
                <TextView
                        android:layout_weight="1"
                        android:id="@+id/manage_budget_largest_credit_description"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/manage_budget_largest_value"
                        android:layout_width="0dp"/>
                <TextView
                        android:id="@+id/manage_budget_largest_credit_amount"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="right|center"
                        android:textSize="@dimen/manage_budget_largest_value"
                        android:layout_width="0dp"/>
            </LinearLayout>
            <TextView
                    android:paddingTop="6dp"
                    android:text="@string/largest_debit_label"
                    android:paddingLeft="@dimen/table_row_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/summary_label_big"
                    />
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:paddingLeft="@dimen/table_row_padding"
                          android:paddingRight="@dimen/table_row_padding"
                          android:layout_height="wrap_content">
                <TextView
                        android:layout_weight="1"
                        android:id="@+id/manage_budget_largest_debit_description"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/manage_budget_largest_value"
                        android:layout_width="0dp"/>
                <TextView
                        android:id="@+id/manage_budget_largest_debit_amount"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="right|center"
                        android:textSize="@dimen/manage_budget_largest_value"
                        android:layout_width="0dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>